# autoresearch-edu

./: .gitignore  LICENSE  README.md  prepare.py  program.md  pyproject.toml  results.json  train.py
.claude/commands/: autoresearch.md
src/: __init__.py  autoresearch_demo.py  visualize_results.py
